Fixed about section being cut off

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -245,9 +245,10 @@ p{ font-weight: 100;}
 }
 #about-us{
     position: relative;
-    top: 5rem;
     #about-content{
         max-width: 650px;
+        margin-top: 60px;
+
     }
 }
 #features-list{
@@ -306,6 +307,7 @@ footer p{
     #hero-content h1{font-size: 2.25rem;}
     #hero-content h2 { font-size: 1rem;}
     .this-content { width: 100%;}
+    #features-list{ flex-direction: column;}
  }
 
  // Small devices (landscape phones, 576px and up)
